testdata/baselines/reference/submodule/compiler/noUnusedLocals_typeParameterMergedWithParameter.errors.txt
noUnusedLocals_typeParameterMergedWithParameter.ts(1,17): error TS6196: 'T' is declared but never used.
noUnusedLocals_typeParameterMergedWithParameter.ts(1,18): error TS6196: 'T' is declared but never used.
noUnusedLocals_typeParameterMergedWithParameter.ts(1,21): error TS6133: 'T' is declared but its value is never read.
noUnusedLocals_typeParameterMergedWithParameter.ts(3,18): error TS6196: 'T' is declared but never used.
noUnusedLocals_typeParameterMergedWithParameter.ts(7,23): error TS6196: 'T' is declared but never used.
noUnusedLocals_typeParameterMergedWithParameter.ts(7,26): error TS6133: 'T' is declared but its value is never read.


==== noUnusedLocals_typeParameterMergedWithParameter.ts (6 errors) ====
    function useNone<T>(T: number) {}
                    ~~~
!!! error TS6196: 'T' is declared but never used.
                     ~
!!! error TS6196: 'T' is declared but never used.
                        ~~~~~~~~~
!!! error TS6133: 'T' is declared but its value is never read.
    
    function useParam<T>(T: number) {
                     ~~~
!!! error TS6196: 'T' is declared but never used.
        return T;
    }
    
    function useTypeParam<T>(T: T) {}
                          ~
!!! error TS6196: 'T' is declared but never used.
                             ~~~~
!!! error TS6133: 'T' is declared but its value is never read.
    
    function useBoth<T>(T: T) {
        return T;
    }
    